# resh

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MYSQL_CONNECTION_GUIDE.md  PLUGIN_SYSTEM_RESULTS.md  README.md  ROADMAP.md
assets/plugins/: catalog.json
docs/: resh_overview.md
docs/Automation_Utilities/: backup.md  overview.md  plugin.md  template.md
docs/Data_StateManagement/: cache.md  config.md  db.md  event.md  log.md  log_command_reference.md  mq.md  overview.md
docs/Filesystem_Storage/: archive.md  file.md  fs.md  overview.md  snapshot.md
docs/Network_RemoteOperations/: dns.md  http.md  mail.md  net.md  overview.md  ssh.md
docs/Packages_Software/: git.md  overview.md  pkg.md
docs/Process_ServiceManagement/: cron.md  overview.md  proc.md  svc.md
docs/Security_Secrets/: cert.md  firewall.md  overview.md  secret.md  user.md
docs/SystemInformation/: overview.md  system.md
src/: lib.rs  main.rs
src/backends/: mod.rs
src/backends/backup/: borg.rs  mod.rs  restic.rs  rsync.rs  stub.rs  tar.rs
src/core/: envelope.rs  mod.rs  parse.rs  registry.rs  status.rs
src/handles/: mod.rs
src/handles/automation/: backuph.rs  mod.rs  pluginh.rs  templateh.rs
src/handles/automation/backup/: fs_snapshots.rs  mod.rs  policy.rs  tools.rs
src/handles/data/: cacheh.rs  config.rs  dbh.rs  eventh.rs  logh.rs  mod.rs  mqh.rs
src/handles/filesystem/: archiveh.rs  fileh.rs  fs_atomic.rs  fsh.rs  mod.rs  snapshot.rs
src/handles/network/: dnsh.rs  httph.rs  mailh.rs  mod.rs  neth.rs  sshh.rs
src/handles/pluginh/: mod.rs  state.rs
src/handles/pluginh/available/: helpers.rs  index.rs  mod.rs  model.rs
src/handles/pluginh/plugin/: engine.rs  mod.rs  registry.rs  store.rs  types.rs
src/handles/processes/: cronh.rs  mod.rs  proch.rs  svch.rs
src/handles/security/: certh.rs  firewallh.rs  mod.rs  secreth.rs  userh.rs
src/handles/system/: gith.rs  mod.rs  pkgh.rs  systemh.rs
tmp-sample-plugin/: hello-plugin.sh  plugin.json
