[package]
name = "resh"
version = "0.7.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
time = "0.3"
chrono = { version = "0.4", features = ["clock", "serde"] }
percent-encoding = "2"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
url = "2"
regex = "1"
dirs = "5"
libc = "0.2"
md5 = "0.7"
sha1 = "0.10"
sha2 = "0.10"
ring = "0.17"
blake3 = "1"
walkdir = "2"
globset = "0.4"
notify = "6"
nix = { version = "0.29", default-features = false, features = ["user", "fs", "process", "resource"] }

zbus = { version = "3", default-features = true, features = ["tokio"] }
zvariant = "3"
which = "6"
base64 = "0.22"
xattr = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
rsa = "0.9"
filetime = "0.2"
if-addrs = "0.11"
trust-dns-resolver = "0.23"
trust-dns-client = "0.23"
trust-dns-proto = "0.23"
tokio = { version = "1", features = ["rt", "net", "time", "io-util"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "chrono"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
memcache = "0.17"
dashmap = "6"
log = "0.4"
git2 = { version = "0.18", features = ["ssh"] }
x509-parser = "0.16"
cron = "0.12"
bcrypt = "0.15"
der = "0.7"
pem = "3.0"
pkcs8 = { version = "0.10", features = ["pkcs5"] }
pkcs1 = "0.7"
sec1 = "0.7"
p256 = "0.13"
p384 = "0.13"
ed25519-dalek = "2.0"
hex = "0.4"
rcgen = { version = "0.12", features = ["x509-parser", "ring"] }
x509-cert = "0.2"
spki = "0.7"
const-oid = "0.9"
argon2 = "0.5"
pbkdf2 = { version = "0.12", features = ["simple"] }
openssh = "0.11"
sysinfo = "0.32"

# Archive handling
tar = "0.4"
zip = "0.6"
sevenz-rust = "0.5"

# Compression  
flate2 = "1.0"
xz2 = "0.1"
zstd = "0.13"

# Mail handling
lettre = "0.11"
email-address-parser = "2.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
httptest = "0.15"
mockito = "1"
httpmock = "0.7"
scopeguard = "1"

which = "6"

[features]
dns-e2e = []
pkg-dnf-integration = []
pkg-yum-integration = []
pkg-pacman-integration = []
pkg-apk-integration = []
pkg-brew-integration = []
